# CountDaLoot

./: CHANGELOG.txt  CHANGELOG_dev.txt  CMakeLists.txt  LICENSE  README.md  cloc.py
data/: font.xml  font_11.xml
gui/CountDaLoot/: CountDaLoot.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/: CMakeLists.txt
qt/inc/updater/: LabelUpdater.hpp  TextEditUpdater.hpp
qt/src/updater/: LabelUpdater.cpp  TextEditUpdater.cpp
resources/data/: font.xml  font_11.xml
sources/: CMakeLists.txt
sources/inc/: CountDaLoot.hpp
sources/inc/capture/: ScreenCapturer.hpp
sources/inc/consts/: consts.hpp
sources/inc/data/: DataProvider.hpp
sources/inc/data/img/: ImageDataProvider.hpp
sources/inc/font/: LootFont.hpp
sources/inc/font/db/: Character.hpp  CharacterDb.hpp
sources/inc/graphics/: Image.hpp
sources/inc/log/: CommonLoggers.hpp  ConditionalLogger.hpp  Logger.hpp  LoggerFactory.hpp  LoggerType.hpp  StructLogger.hpp
sources/inc/log/condition/: LogDifferentThanLastCondition.hpp  LoggerCondition.hpp
sources/inc/log/converter/: PosToStringConverter.hpp  RectToStringConverter.hpp  RgbaToStringConverter.hpp  SimpleToStringConverter.hpp  SizeToStringConverter.hpp
sources/inc/loot/: ILootObserver.hpp  ILootStatsObserver.hpp  KilledMonstersData.hpp  LootData.hpp  LootFilter.hpp  NewLootProvider.hpp  TabLootReader.hpp
sources/inc/loot/parse/: LootLineParser.hpp  ParsedLootLine.hpp
sources/inc/loot/tab/: ILootTabStateObserver.hpp  LootTabCoordinates.hpp  LootTabData.hpp  LootTabFinder.hpp  LootTabProvider.hpp  LootTabState.hpp  TabLootReader.hpp
sources/inc/structs/: Pos.hpp  Rect.hpp  Rgba.hpp  Size.hpp
sources/inc/text/: TextReader.hpp
sources/inc/thread/: ThreadWorker.hpp
sources/inc/ui/controls/: Table.hpp
sources/inc/utils/: ObserversContainer.hpp  string.hpp  traits.hpp
sources/inc/view/: LootListUpdater.hpp  LootListViewType.hpp  LootTabStateLabelUpdater.hpp
sources/inc/view/summary/: MonsterMapSorter.hpp  SummaryItemsUpdater.hpp  SummaryMonstersUpdater.hpp  SummaryUpdater.hpp
sources/src/: CountDaLoot.cpp
sources/src/capture/: ScreenCapturer.cpp
sources/src/consts/: consts.cpp
sources/src/data/: DataProvider.cpp
sources/src/data/img/: ImageDataProvider.cpp
sources/src/font/: LootFont.cpp
sources/src/font/db/: Character.cpp
sources/src/graphics/: Image.cpp
sources/src/loot/: KilledMonstersData.cpp  LootFilter.cpp  NewLootProvider.cpp
sources/src/loot/parse/: LootLineParser.cpp
sources/src/loot/tab/: LootTabFinder.cpp  LootTabProvider.cpp  TabLootReader.cpp
sources/src/text/: TextReader.cpp
sources/src/thread/: ThreadWorker.cpp
sources/src/utils/: string.cpp
sources/src/view/: LootListUpdater.cpp  LootTabStateLabelUpdater.cpp
sources/src/view/summary/: MonsterMapSorter.cpp  SummaryItemsUpdater.cpp  SummaryMonstersUpdater.cpp  SummaryUpdater.cpp
tests/: CMakeLists.txt
tests/loot/: CMakeLists.txt  LootTabReaderTests.cpp
tests/loot/parse/: LootLineParser.cpp
tests/utils/: CMakeLists.txt  string.cpp
utils/scripts/: .gitignore  cloc.py  release.py
